--- a/MiAlertaMVC/Views/AlertasComunidad/Index.cshtml
+++ b/MiAlertaMVC/Views/AlertasComunidad/Index.cshtml
@@ -8,33 +8,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4uP5ceN8L0bc4GEK8tjHtQQUffryaHdo"></script>
 
 <style type="text/css">
-    .table tbody tr:hover {
-        cursor: pointer;
-        background-color: #20aee3;
-        color: white;
-    }
-
-    /* Estilo para la fila seleccionada */
-    .table tbody tr.selected {
-        background-color: #20aee3;
-        color: white;
-    }
-
-    .red-row {
-        background-color: #f28b82; /* Rojo pastel */
-        color: black;
-    }
-
-    .yellow-row {
-        background-color: #fff475; /* Amarillo pastel */
-        color: black;
-    }
-
-    .green-row {
-        background-color: #ccff90; /* Verde pastel */
-        color: black;
-    }
-
+   
 </style>
 <div class="page-wrapper">
     <div class="container-fluid">
@@ -86,60 +60,81 @@
 
 
 
-                            <div class="table-responsive">
-                                <table id="communityTable" class="table no-wrap">
-                                    <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Comunidad</th>
-                                            <th>Texto</th>
-                                            <th>Nombre</th>
-                                            <th>Correo</th>
-                                            <th>Direccion</th>
-                                            <th>NumeroTelefonico</th>
-                                            <th>Fecha</th>
-                                            <th>Latitud</th>
-                                            <th>Longitud</th>
-                                            <th>IDUsuarioNotificacion</th>
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var community in Model)
-                                        {
-                                            string rowClass = "ok-row"; // Clase por defecto
-
-                                            // Asignación de la clase basada en el tipo de emergencia
-                                            if (community.TextoEmergencia.Contains("¡ASALTO!"))
-                                            {
-                                                rowClass = "red-row";
-                                            }
-                                            else if (community.TextoEmergencia.Contains("¡INCENDIO!"))
-                                            {
-                                                rowClass = "yellow-row";
-                                            }
-                                            else if (community.TextoEmergencia.Contains("¡EMERGENCIA MÉDICA!"))
-                                            {
-                                                rowClass = "green-row";
-                                            }
-
-                                            <tr class="@rowClass">
-                                                <td class="text-end">@community.IDComunidad</td>
-                                                <td>@community.Descripcion</td>
-                                                <td>@community.TextoEmergencia</td>
-                                                <td>@community.Nombre</td>
-                                                <td>@community.Correo</td>
-                                                <td>@community.Direccion</td>
-                                                <td>@community.NumeroTelefonico</td>
-                                                <td>@community.FechaHora.ToString("yyyy-MM-dd hh:mm:ss")</td>
-                                                <td class="text-end">@community.Latitud</td>
-                                                <td class="text-end">@community.Longitud</td>
-                                                <td>@community.IDUsuarioNotificacion</td>
+                            <div class="  mt-5">
+                                <div class="table-responsive">
+                                    <table id="communityTable" class="table table-striped table-bordered">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Comunidad</th>
+                                                <th>Texto</th>
+                                                <th>Nombre</th>
+                                                <th>Fecha</th>
+                                                <th>Correo</th>
+                                                <th>Dirección</th>
+                                                <th>Número Telefónico</th>
+                                                <th>Latitud</th>
+                                                <th>Longitud</th>
+                                                <th>ID Usuario Notificación</th>
                                             </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var community in Model)
+                                            {
+                                                string rowClass = "table-light"; // Clase por defecto
+                                                string iconHtml = ""; // Variable para el icono
+
+                                                // Asignación de la clase basada en el tipo de emergencia
+                                                if (community.TextoEmergencia.Contains("¡ASALTO!"))
+                                                {
+                                                    rowClass = "table-danger"; // Fila roja
+                                                    iconHtml = "<i class='fas fa-user-shield  fa-2x'></i>"; // Icono de robo
+                                                }
+                                                else if (community.TextoEmergencia.Contains("¡INCENDIO!"))
+                                                {
+                                                    rowClass = "table-warning"; // Fila amarilla
+                                                    iconHtml = "<i class='fas fa-fire  fa-2x'></i>"; // Icono de incendio
+                                                }
+                                                else if (community.TextoEmergencia.Contains("¡EMERGENCIA MÉDICA!"))
+                                                {
+                                                    rowClass = "table-success"; // Fila verde
+                                                    iconHtml = "<i class='fas fa-ambulance fa-2x'></i>"; // Icono de ambulancia
+                                                }
+
+                                                <tr class="@rowClass">
+                                                    <td class="text-center">@Html.Raw(iconHtml) <b class="d-none">@community.IDComunidad</b></td>
+                                                    <td>@community.Descripcion</td>
+                                                    <td>@community.TextoEmergencia</td>
+                                                    <td>@community.Nombre</td>
+                                                    <td>@community.FechaHora.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                                                    <td>@community.Correo</td>
+                                                    <td>@community.Direccion</td>
+                                                    <td class="text-right">@community.NumeroTelefonico</td>
+                                                    <td class="text-end">@community.Latitud</td>
+                                                    <td class="text-end">@community.Longitud</td>
+                                                    <td class="text-right">@community.IDUsuarioNotificacion</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+
+                                  
+                                </div>
+                                <nav aria-label="Page navigation" class="mt-4">
+                                    <ul class="pagination justify-content-center">
+                                        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                                        {
+                                            <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
+                                                <a class="page-link" href="@Url.Action("Index", new { idComunidad = ViewBag.ComunidadId, pageNumber = i, pageSize = ViewBag.PageSize })">
+                                                    @i
+                                                </a>
+                                            </li>
                                         }
-                                    </tbody>
-                                </table>
+                                    </ul>
+                                </nav>
                             </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -150,10 +145,10 @@
 <!-- Modal -->
 
 <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="infoModalLabel">Detalles de la Información</h5>
+                <h5 class="modal-title text-white" id="infoModalLabel">Detalles de la Información</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -162,17 +157,18 @@
 
                 <!-- Table Container -->
                 <div class="table-responsive mt-3">
-                    <table id="" class="table table-bordered">
-                        <thead>
-                            <tr>
+                    <table id="TablaModalDetallesAlerta" class="table table-bordered">
+                        <thead class="thead-dark">
+                            <tr class="">
                                 <th>ID</th>
                                 <th>Comunidad</th>
                                 <th>Texto</th>
                                 <th>Nombre</th>
+                                <th>Fecha</th>
+
                                 <th>Correo</th>
                                 <th>Direccion</th>
                                 <th>NumeroTelefonico</th>
-                                <th>Fecha</th>
                                 <th>Latitud</th>
                                 <th>Longitud</th>
                                 <th>IDUsuarioNotificacion</th>
@@ -188,11 +184,10 @@
                                     <td>@community.Descripcion</td>
                                     <td>@community.TextoEmergencia</td>
                                     <td>@community.Nombre</td>
-
+                                    <td>@community.FechaHora.ToString("yyyy-MM-dd hh:mm:ss")</td>
                                     <td>@community.Correo</td>
                                     <td>@community.Direccion</td>
                                     <td>@community.NumeroTelefonico</td>
-                                    <td>@community.FechaHora.ToString("yyyy-MM-dd hh:mm:ss")</td>
                                     <td class="text-end">@community.Latitud</td>
                                     <td class="text-end">@community.Longitud</td>
                                     <td>@community.IDUsuarioNotificacion</td>
@@ -267,6 +262,44 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <i class="fas fa-times-circle text-danger" style="font-size: 3rem;"></i>
+                <h5 id="errorMessage" class="mt-3"></h5>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="processingModal" tabindex="-1" aria-labelledby="processingModalLabel" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-center">
+            <div class="modal-header">
+                <h5 class="modal-title" id="processingModalLabel">Procesando Descarga</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="spinner-border text-primary my-5 fs-4" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <p>Generando el archivo Excel, por favor espere...</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -365,6 +398,9 @@
                 // Enviar el array como una cadena JSON
                 formData.append('idComunidades', JSON.stringify(selectedOptionsTexts));
 
+                // Mostrar el modal de "procesando"
+                $('#processingModal').modal('show');
+
                 fetch('/AlertasComunidad/ExportToExcel', {
                     method: 'POST',
                     headers: {
@@ -389,6 +425,9 @@
                         return response.blob().then(blob => ({ blob, fileName }));
                     })
                     .then(({ blob, fileName }) => {
+                        // Ocultar el modal de "procesando" al completar la descarga
+                        $('#processingModal').modal('hide');
+
                         const url = window.URL.createObjectURL(blob);
                         const a = document.createElement('a');
                         a.href = url;
@@ -399,11 +438,16 @@
                         window.URL.revokeObjectURL(url);
                     })
                     .catch(error => {
+                        // Ocultar el modal de "procesando" y mostrar el modal de error
+                        $('#processingModal').modal('hide');
+                        $('#errorMessage').text(error.message || "Ocurrió un error al generar el archivo.");
+                        $('#errorModal').modal('show');
                         console.error('Error:', error);
                     });
             } else {
-                console.error("El elemento con id 'planSelect' no se encontró en el DOM.");
+                console.error("El elemento con id 'comunidadId' no se encontró en el DOM.");
             }
         });
+
     });
 </script>
