--- a/MiAlertaMVC/Views/Perfil/Index.cshtml
+++ b/MiAlertaMVC/Views/Perfil/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using MiAlertaMVC.Extensiones
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <div class="page-wrapper">
     <div class="container-fluid">
         <div class="row page-titles">
@@ -89,7 +89,7 @@
 
                                             </div>
 
-                                            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                                            <button  class="btn btn-primary">Guardar Cambios</button>
                                         </form>
                                     </div>
                                 }
@@ -107,7 +107,80 @@
         </div>
     </div>
 </div>
+<!-- Modal de éxito con ícono de visto bueno -->
+<div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="successModalLabel">Éxito</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <!-- Ícono de visto bueno -->
+                <i class="fa fa-check-circle" style="font-size: 4rem; color: green;"></i>
+                <!-- Mensaje de éxito con signos de exclamación -->
+                <div id="successMessage" class="mt-3 fs-4">¡Perfil actualizado exitosamente!</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal de error con ícono de advertencia -->
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <!-- Ícono de advertencia -->
+                <i class="fa fa-exclamation-circle" style="font-size: 4rem; color: red;"></i>
+                <!-- Mensaje de error con signos de exclamación -->
+                <div id="errorMessage" class="mt-3" style="font-size: 1.2rem; font-weight: bold;">¡Hubo un error al actualizar el perfil!</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
+
+    $(document).ready(function () {
+        $('form').on('submit', function (e) {
+            e.preventDefault(); // Evita el envío tradicional del formulario
+
+            $.ajax({
+                type: "POST",
+                url: $(this).attr('action'),
+                data: $(this).serialize(),
+                success: function (response) {
+                    if (response.success) {
+                        $('#successMessage').text(response.message);
+                        $('#successModal').modal('show');
+                    } else {
+                        $('#errorMessage').text(response.message);
+                        $('#errorModal').modal('show');
+                    }
+                },
+                error: function () {
+                    $('#errorMessage').text('Ocurrió un error inesperado.');
+                    $('#errorModal').modal('show');
+                }
+            });
+        });
+    });
+
+
     document.getElementById('togglePassword').addEventListener('click', function (e) {
         const passwordInput = document.getElementById('Password');
         const icon = this.querySelector('i');
