--- a/MiAlertaMVC/Views/Shared/_Layout.cshtml
+++ b/MiAlertaMVC/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/pages/dashboard1.css" rel="stylesheet" />
     <link href="~/css/colors/default.css" id="theme" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
         /* Custom styles for the sidebar */
         .sidebar {
@@ -166,7 +168,7 @@
                     </li>
                     <li>
                         <a id="linkAlertas" class="waves-effect waves-dark" asp-controller="AlertasComunidad" asp-action="Index" aria-expanded="false">
-                            <i class="fa fa-users"></i><span class="hide-menu">Alertas Comunidad/es</span>
+                            <i class="fa fa-bell"></i><span class="hide-menu">Alertas Comunidad/es</span>
                         </a>
                     </li>
                     <li>
@@ -248,6 +250,8 @@
     <!-- Chart JS -->
     @* <script src="js/dashboard1.js"></script> *@
     <script src="~/js/dashboard1.js"></script>
+
+    <!-- DataTables versión compatible -->
     <script>
 
         $(document).ready(function () {
@@ -261,6 +265,7 @@
                     }
                 }
             });
+
         });
 
     </script>
